--- a/wtr/templates/dashboard.html
+++ b/wtr/templates/dashboard.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    User Profile
+    {{ name }}'s Dashboard
 {% endblock %}
 
 {% block body %}
 
     <div class="jumbotron text-center">
-        <h1>User Information</h1><br>
+        <h1>Dashboard</h1><br>
         <p class="lead">
-            Welcome to {{ user['username'] }}'s profile!
+            Welcome to your dashboard, {{ name }}!
         </p>
     </div>
 
