--- a/wtr/templates/email/confirm.html
+++ b/wtr/templates/email/confirm.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Activate Your Account</title>
+    <title>Confirm Your E-mail Address</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 
@@ -16,13 +16,13 @@
 <body>
 
     <div class="jumbotron text-center">
-        <h1>Hello, {{ username }}!</h1>
+        <h1>Hello, {{ user.first_name }}!</h1>
         <br>
         <p class="lead">
-            Thanks for riding with us. Click below to activate your account.
+            Thanks for riding with us. Click below to confirm your e-mail address.
         </p>
         <br>
-        <a href="{{ confirm_url }}" class="btn btn-primary btn-lg" role="button">Activate My Account</a>
+        <a href="{{ confirm_url }}" class="btn btn-primary btn-lg" role="button">Confirm E-mail Address</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
