--- a/wtr/templates/register.html
+++ b/wtr/templates/register.html
@@ -15,7 +15,7 @@
         {{ form.csrf_token }}
 
         <div class="form-group">
-            {{ render_field(form.username, class_="form-control") }}
+            {{ render_field(form.email, class_="form-control") }}
         </div>
 
         <div class="form-group">
@@ -27,7 +27,11 @@
         </div>
 
         <div class="form-group">
-            {{ render_field(form.email, class_="form-control") }}
+            {{ render_field(form.first_name, class_="form-control") }}
+        </div>
+
+        <div class="form-group">
+            {{ render_field(form.last_name, class_="form-control") }}
         </div>
 
         <div class="form-group">
