--- a/wtr/templates/users.html
+++ b/wtr/templates/users.html
@@ -13,7 +13,9 @@
             {% if users %}
                 <ul class="list-group">
                     {% for user in users %}
-                        <li class="list-group-item">{{ user['username'] }}</li>
+                        <li class="list-group-item">
+                            {{ user['first_name'] }} {{ user['last_name'] }}
+                        </li>
                     {% endfor %}
                 </ul>
             {% else %}
