--- a/wtr/templates/users.html
+++ b/wtr/templates/users.html
@@ -12,9 +12,9 @@
 
             {% if users %}
                 <ul class="list-group">
-                    {% for user in users %}
+                    {% for u in users %}
                         <li class="list-group-item">
-                            {{ user['first_name'] }} {{ user['last_name'] }}
+                            {{ u['first_name'] }} {{ u['last_name'] }}
                         </li>
                     {% endfor %}
                 </ul>
