--- a/WeatherToRide/templates/base.html
+++ b/WeatherToRide/templates/base.html
@@ -12,8 +12,10 @@
     <div class="container">
         {% include 'includes/_messages.html' %}
         {% include 'includes/_navbar.html' %}
+        <br>
         {% block body %}{% endblock %}
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    {% block script %}{% endblock %}
 </body>
 </html>
