--- a/WeatherToRide/templates/auth/login.html
+++ b/WeatherToRide/templates/auth/login.html
@@ -1,12 +1,13 @@
+
 {% extends 'base.html' %}
 
 {% block title %}
-    Register
+    Login
 {% endblock %}
 
 {% block body %}
 
-    <br><h1>Register</h1><br>
+    <br><h1>Login</h1><br>
 
     {% from "includes/_form_helpers.html" import render_field %}
 
@@ -20,22 +21,6 @@
 
         <div class="form-group">
             {{ render_field(form.password, class_="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ render_field(form.confirm, class_="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ render_field(form.first_name, class_="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ render_field(form.last_name, class_="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ render_field(form.phone, class_="form-control") }}
         </div>
 
         <br>
