--- a/WeatherToRide/templates/auth/register.html
+++ b/WeatherToRide/templates/auth/register.html
@@ -1,12 +1,13 @@
+
 {% extends 'base.html' %}
 
 {% block title %}
-    Login
+    Register
 {% endblock %}
 
 {% block body %}
 
-    <br><h1>Login</h1><br>
+    <br><h1>Register</h1><br>
 
     {% from "includes/_form_helpers.html" import render_field %}
 
@@ -20,6 +21,22 @@
 
         <div class="form-group">
             {{ render_field(form.password, class_="form-control") }}
+        </div>
+
+        <div class="form-group">
+            {{ render_field(form.confirm, class_="form-control") }}
+        </div>
+
+        <div class="form-group">
+            {{ render_field(form.first_name, class_="form-control") }}
+        </div>
+
+        <div class="form-group">
+            {{ render_field(form.last_name, class_="form-control") }}
+        </div>
+
+        <div class="form-group">
+            {{ render_field(form.phone, class_="form-control") }}
         </div>
 
         <br>
