--- a/WeatherToRide/templates/users.html
+++ b/WeatherToRide/templates/users.html
@@ -15,7 +15,7 @@
                 <ul class="list-group">
                     {% for u in users %}
                         <li class="list-group-item">
-                            {{ u['first_name'] }} {{ u['last_name'] }}
+                            {{ u.name }}
                         </li>
                     {% endfor %}
                 </ul>
