--- a/WeatherToRide/templates/auth/register.html
+++ b/WeatherToRide/templates/auth/register.html
@@ -28,11 +28,7 @@
         </div>
 
         <div class="form-group">
-            {{ render_field(form.first_name, class_="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ render_field(form.last_name, class_="form-control") }}
+            {{ render_field(form.name, class_="form-control") }}
         </div>
 
         <div class="form-group">
