--- a/WeatherToRide/templates/email/confirm.html
+++ b/WeatherToRide/templates/email/confirm.html
@@ -8,7 +8,7 @@
 {% block body %}
 
     <div class="jumbotron text-center">
-        <h1>Hello, {{ user.first_name }}!</h1>
+        <h1>Hello, {{ user.name }}!</h1>
         <br>
         <p class="lead">
             Thanks for riding with us. Click below to confirm your e-mail address.
