--- a/WeatherToRide/templates/location/location.html
+++ b/WeatherToRide/templates/location/location.html
@@ -11,16 +11,16 @@
 
     {% from "includes/_form_helpers.html" import render_field %}
 
-    <form method="POST">
+    <form method="POST" id="locationForm">
 
         {{ form.csrf_token }}
 
         <div class="form-group">
-            {{ render_field( form.title, class_="form-control" ) }}
+            {{ render_field( form.name, class_="form-control" ) }}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.address, class_="form-control" ) }}
+            {{ render_field( form.address, class_="form-control", id="address") }}
         </div>
 
         <br>
@@ -40,20 +40,26 @@
 
     <script>
 
-        var latField = document.getElementById("latField");
-        var lngField = document.getElementById("lngField");
+        var locationForm = document.getElementById("locationForm")
+        var addressField = document.getElementById("address")
         
         function getLocation() {
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(showPosition);
             } else { 
-                alert("Geolocation is not supported by this browser.");
+                alert("Geolocation is not supported by your browser.");
             }
         }
         
         function showPosition(position) {
-            latField.value = position.coords.latitude;
-            lngField.value = position.coords.longitude;
+
+            var lat = position.coords.latitude;
+            var lng = position.coords.longitude;
+
+            addressField.value = `<<<${lat},${lng}>>>`;
+
+            locationForm.submit();
+
         }
 
     </script>
