--- a/WeatherToRide/templates/base.html
+++ b/WeatherToRide/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    {% block style %}{% endblock %}
 </head>
 <body>
     <div class="container">
