--- a/WeatherToRide/templates/dashboard.html
+++ b/WeatherToRide/templates/dashboard.html
@@ -22,18 +22,32 @@
     {% for location in locations %}
 
         <div class="jumbotron text-center">
+
             <form action="{{ url_for('delete_location', id=location.id) }}" method="POST">
+
                 {{ form.csrf_token }}
-                <h1>{{ location.name }}</h1><br>
+
+                <h1>{{ location.name }}</h1>
+
+                <br>
+
                 <p class="lead">
-                    ( {{ location.lat }} , {{ location.lng }} )
-                </p><br>
+                    {{ location.weather.day_0 }}
+                </p>
+
+                <br>
+
                 <div class="btn-group">
+
                     <a href="{{ url_for('update_location', id=location.id) }}" 
                         class="btn btn-primary" role="button">Update</a>
+
                     {{ form.submit(class_="btn btn-danger", value="Remove") }}
+
                 </div>
+
             </form>
+
         </div>
 
     {% endfor %}
@@ -45,7 +59,7 @@
                 {{ form.csrf_token }}
                 <h1>{{ route.name }}</h1><br>
                 <p class="lead">
-                    ( {{ route.start }} -> {{ route.final }} )
+                    ( {{ route.start }} -> {{ route.final }} ) @ {{ route.time.time() }}
                 </p><br>
                 <div class="btn-group">
                     <a href="{{ url_for('update_route', id=route.id) }}" 
