--- a/WeatherToRide/templates/dashboard.html
+++ b/WeatherToRide/templates/dashboard.html
@@ -32,7 +32,7 @@
                 <br>
 
                 <p class="lead">
-                    {{ location.weather.day_0 }}
+                    <i class="wi {{ location.weather.day_0 }}"></i>
                 </p>
 
                 <br>
