--- a/WeatherToRide/templates/route/route.html
+++ b/WeatherToRide/templates/route/route.html
@@ -15,7 +15,7 @@
 
     {% from "includes/_form_helpers.html" import render_field %}
 
-    <form method="POST" action="/post">
+    <form method="POST">
 
         {{ form.csrf_token }}
 
