Finished route refactoring

--- a/WeatherToRide/templates/about.html
+++ b/WeatherToRide/templates/about.html
@@ -10,7 +10,7 @@
     <div class="jumbotron text-center">
         <h1>About</h1><br>
         <p class="lead">
-            This application is built as a class project by Gregory Sullivan and Branwin DuBose.
+            WeatherToRide began as a class project.
         </p>
     </div>
 
