--- a/WeatherToRide/templates/route/route.html
+++ b/WeatherToRide/templates/route/route.html
@@ -24,11 +24,11 @@
         </div>
 
         <div class="form-group">
-            {{ render_field( form.start, class_="form-control" ) }}
+            {{ render_field( form.location_1, class_="form-control" ) }}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.final, class_="form-control" ) }}
+            {{ render_field( form.location_2, class_="form-control" ) }}
         </div>
 
         <div class="form-group">
