Added weather forecast for locations to dashboard

--- a/WeatherToRide/templates/dashboard.html
+++ b/WeatherToRide/templates/dashboard.html
@@ -32,7 +32,8 @@
                 <br>
 
                 <p class="lead">
-                    <i class="wi {{ location.forecast.day_0 }}"></i>
+                    <h2>{{ location.forecast.day_0_weather }}</h2>
+                    {{ location.forecast.day_0_summary }}
                 </p>
 
                 <br>
