Added new weather icons with color

--- a/WeatherToRide/templates/base.html
+++ b/WeatherToRide/templates/base.html
@@ -14,9 +14,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
         crossorigin="anonymous">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/weather-icons.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/weather-icons-wind.min.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.png') }}">
 
     {% block style %}{% endblock %}
 
