--- a/WeatherToRide/templates/index.html
+++ b/WeatherToRide/templates/index.html
@@ -8,7 +8,8 @@
 {% block body %}
 
     <div class="jumbotron text-center">
-        <h1>Homepage</h1><br>
+        <h1>Homepage</h1>
+        <br><br>
         <p class="lead">
             This application is built with Python using the Flask web framework.
         </p>
