--- a/WeatherToRide/templates/dashboard.html
+++ b/WeatherToRide/templates/dashboard.html
@@ -61,7 +61,7 @@
                 {% else %}
 
                     <br>
-                    <p>The weather for this location could not be found. Ride carefully!</p>
+                    <p>The weather for this location could not be found.</p>
                     <br>
 
                 {% endif %}
