--- a/WeatherToRide/templates/login.html
+++ b/WeatherToRide/templates/login.html
@@ -16,14 +16,19 @@
         {{ form.csrf_token }}
 
         <div class="form-group">
-            {{ render_field(form.email, class_="form-control") }}
+            {{ render_field( form.email, class_="form-control" )}}
         </div>
 
         <div class="form-group">
-            {{ render_field(form.password, class_="form-control") }}
+            {{ render_field( form.password, class_="form-control" )}}
+        </div>
+
+        <div class="form-group">
+            {{ render_field( form.recaptcha, class_="form-control" )}}
         </div>
 
         <br>
+
         <button type="submit" class="btn btn-primary">Submit</button>
 
     </form>
