--- a/WeatherToRide/templates/register.html
+++ b/WeatherToRide/templates/register.html
@@ -2,16 +2,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Add Route
-{% endblock %}
-
-{% block style %}
-    <style> ul { list-style-type: none; } </style>
+    Register
 {% endblock %}
 
 {% block body %}
 
-    <br><h1>Route</h1><br>
+    <br><h1>Register</h1><br>
 
     {% from "includes/_form_helpers.html" import render_field %}
 
@@ -20,26 +16,31 @@
         {{ form.csrf_token }}
 
         <div class="form-group">
-            {{ render_field( form.name, class_="form-control" ) }}
+            {{ render_field( form.email, class_="form-control" )}}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.location_1, class_="form-control" ) }}
+            {{ render_field( form.password, class_="form-control" )}}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.location_2, class_="form-control" ) }}
+            {{ render_field( form.confirm, class_="form-control" )}}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.time, class_="form-control" ) }}
+            {{ render_field( form.name, class_="form-control" )}}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.days, class_="form-control" ) }}
+            {{ render_field( form.phone, class_="form-control" )}}
+        </div>
+
+        <div class="form-group">
+            {{ render_field( form.recaptcha, class_="form-control" )}}
         </div>
 
         <br>
+
         <button type="submit" class="btn btn-primary">Submit</button>
 
     </form>
