--- a/WeatherToRide/templates/route.html
+++ b/WeatherToRide/templates/route.html
@@ -24,15 +24,11 @@
         </div>
 
         <div class="form-group">
-            {{ render_field( form.location_1, class_="form-control" )}}
+            {{ render_field( form.location_id_1, class_="form-control" )}}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.location_2, class_="form-control" )}}
-        </div>
-
-        <div class="form-group">
-            {{ render_field( form.time, class_="form-control" )}}
+            {{ render_field( form.location_id_2, class_="form-control" )}}
         </div>
 
         <div class="form-group">
