--- a/WeatherToRide/templates/base.html
+++ b/WeatherToRide/templates/base.html
@@ -14,6 +14,8 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
         crossorigin="anonymous">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
     <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.png') }}">
 
     {% block style %}{% endblock %}
