Bug fix on dashboard

--- a/WeatherToRide/templates/dashboard.html
+++ b/WeatherToRide/templates/dashboard.html
@@ -68,37 +68,37 @@
                                         <p class="lead">{{ location.forecast.day_1_recommendation }}</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h5>{{ day2 }}</h5>
+                                        <h5>{{ day_2 }}</h5>
                                         <br><img src="/static/icons/weather/{{ location.forecast.day_2_icon }}.png"><br><br>
                                         <p class="lead">{{ location.forecast.day_2_summary }}</p>
                                         <p class="lead">{{ location.forecast.day_2_recommendation }}</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h5>{{ day3 }}</h5>
+                                        <h5>{{ day_3 }}</h5>
                                         <br><img src="/static/icons/weather/{{ location.forecast.day_3_icon }}.png"><br><br>
                                         <p class="lead">{{ location.forecast.day_3_summary }}</p>
                                         <p class="lead">{{ location.forecast.day_3_recommendation }}</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h5>{{ day4 }}</h5>
+                                        <h5>{{ day_4 }}</h5>
                                         <br><img src="/static/icons/weather/{{ location.forecast.day_4_icon }}.png"><br><br>
                                         <p class="lead">{{ location.forecast.day_4_summary }}</p>
                                         <p class="lead">{{ location.forecast.day_4_recommendation }}</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h5>{{ day5 }}</h5>
+                                        <h5>{{ day_5 }}</h5>
                                         <br><img src="/static/icons/weather/{{ location.forecast.day_5_icon }}.png"><br><br>
                                         <p class="lead">{{ location.forecast.day_5_summary }}</p>
                                         <p class="lead">{{ location.forecast.day_5_recommendation }}</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h5>{{ day6 }}</h5>
+                                        <h5>{{ day_6 }}</h5>
                                         <br><img src="/static/icons/weather/{{ location.forecast.day_6_icon }}.png"><br><br>
                                         <p class="lead">{{ location.forecast.day_6_summary }}</p>
                                         <p class="lead">{{ location.forecast.day_6_recommendation }}</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h5>Next {{ day7 }}</h5>
+                                        <h5>Next {{ day_7 }}</h5>
                                         <br><img src="/static/icons/weather/{{ location.forecast.day_7_icon }}.png"><br><br>
                                         <p class="lead">{{ location.forecast.day_7_summary }}</p>
                                         <p class="lead">{{ location.forecast.day_7_recommendation }}</p>
