--- a/WeatherToRide/templates/route.html
+++ b/WeatherToRide/templates/route.html
@@ -32,12 +32,12 @@
         </div>
 
         <div class="form-group">
-            {{ render_field( form.days, class_="form-control" )}}
+            {{ render_field( form.days )}}
         </div>
 
-        <br><br><br><br><br><br><br><br><br>
-
         <button type="submit" class="btn btn-primary">Submit</button>
+
+        <br><br>
 
     </form>
 
